--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -151,5 +151,9 @@ releases:
       - hash: 187d586d5fdaba42d4e6b720ffbfa3b5530d4939
         repo: openstack/reno
     version: 2.8.0
+  - projects:
+      - hash: 52d4c1961da3692bffc1f26f47de11d33c0e545b
+        repo: openstack/reno
+    version: 2.9.0
 repository-settings:
   openstack/reno: {}
