--- a/deliverables/rocky/openstacksdk.yaml
+++ b/deliverables/rocky/openstacksdk.yaml
@@ -10,5 +10,9 @@ releases:
       - hash: f58af1ba4ee17500104e3d304ec3a3498c179b12
         repo: openstack/openstacksdk
     version: 0.12.0
+  - projects:
+      - hash: 7c723f6a1eefc3180f2af75d2faac3aab5371aab
+        repo: openstack/openstacksdk
+    version: 0.13.0
 repository-settings:
   openstack/openstacksdk: {}
