--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -4,5 +4,10 @@ launchpad: neutron
 release-model: cycle-with-intermediary
 team: neutron
 type: library
+releases:
+  - version: 1.14.0
+    projects:
+      - repo: openstack/neutron-lib
+        hash: b34d0e94b383f97dc16672c62bed123eab0ef787
 repository-settings:
   openstack/neutron-lib: {}
