--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: 68b89806a963f7f187e6787b6fc111f4845c2863
         repo: openstack/neutron
     version: 12.0.1
+  - projects:
+      - hash: f68e7822f46ec9577e5a866a67cc54b777240486
+        repo: openstack/neutron
+    version: 12.0.2
 repository-settings:
   openstack/neutron: {}
 branches:
