--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -155,5 +155,9 @@ releases:
       - hash: 52d4c1961da3692bffc1f26f47de11d33c0e545b
         repo: openstack/reno
     version: 2.9.0
+  - projects:
+      - hash: 451d1ebcb9c9b3744c62f97bd4b63959e793de1b
+        repo: openstack/reno
+    version: 2.9.1
 repository-settings:
   openstack/reno: {}
