Change monasca-common deliverable type to library
Change-Id: Iee2cf74e73426a689cea0b22656c9a5120da64ed

--- a/deliverables/rocky/monasca-common.yaml
+++ b/deliverables/rocky/monasca-common.yaml
@@ -2,7 +2,7 @@
 launchpad: monasca
 release-model: cycle-with-intermediary
 team: monasca
-type: other
+type: library
 repository-settings:
   openstack/monasca-common: {}
 releases:
