Tag a 4.0.1 release for networking-ovn
Change-Id: Id062d664c876469717723106ac1b057b6e305125
Signed-off-by: Daniel Alvarez <dalvarez@redhat.com>

--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -31,6 +31,10 @@ releases:
       - hash: 329d6d85b308f1199d521d5efdef49492edb8864
         repo: openstack/networking-ovn
     version: 4.0.0
+  - projects:
+      - hash: e69c768a3d2f38c140bf3d9228741cba7b08a6c5
+        repo: openstack/networking-ovn
+    version: 4.0.1
 repository-settings:
   openstack/networking-ovn: {}
 branches:
