--- a/deliverables/rocky/swift.yaml
+++ b/deliverables/rocky/swift.yaml
@@ -5,3 +5,7 @@ team: swift
 type: service
 repository-settings:
   openstack/swift: {}
+branches:
+  - name: feature/deep-review
+    location:
+      openstack/swift: 331339246228167dfab61690327fc0c3f2fab8af
