--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -46,6 +46,10 @@ releases:
       - hash: 7cb197fb9b0a058e2368dbe2e598e54ba5633a32
         repo: openstack/neutron
     version: 11.0.3
+  - projects:
+      - hash: 1d3568da772dfba989f6b0f18a99f6d02860c2a6
+        repo: openstack/neutron
+    version: 11.0.4
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
