--- a/deliverables/ocata/neutron.yaml
+++ b/deliverables/ocata/neutron.yaml
@@ -53,5 +53,9 @@ releases:
       - hash: f5e7420da5af69293276dc31fe28ff843a74a0b0
         repo: openstack/neutron
     version: 10.0.5
+  - projects:
+      - hash: 93330aca08c30febe8318b3054177d7458fa5283
+        repo: openstack/neutron
+    version: 10.0.6
 repository-settings:
   openstack/neutron: {}
