Oslo releases for 2018-5-1
Change-Id: I0c2f524da300cb97da526367c7eec389eac55bab

--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 2a5251c52da41ae262983a09020a7fd951976fa3
         repo: openstack/oslo.db
     version: 4.37.0
+  - projects:
+      - hash: 06b64aea945d7025d77ec3f97a381d1bf0e606ca
+        repo: openstack/oslo.db
+    version: 4.38.0
