--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: bb78b84c3fc8485e590f2c925c07731a9740a852
         repo: openstack/oslotest
     version: 3.4.1
+  - projects:
+      - hash: 325d0c17a4d406c417d5717826d71cf188262676
+        repo: openstack/oslotest
+    version: 3.4.2
