--- a/deliverables/rocky/tooz.yaml
+++ b/deliverables/rocky/tooz.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 824ff654331ed16f97140ebda347a30268cc1246
         repo: openstack/tooz
     version: 1.61.0
+  - projects:
+      - hash: 2ac3ef36d2687f820cb44f6b27dd81ebf1c4165b
+        repo: openstack/tooz
+    version: 1.62.0
