--- a/deliverables/rocky/os-client-config.yaml
+++ b/deliverables/rocky/os-client-config.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: cf5f446f27a08a41366847e2b586c51f9a6d696f
         repo: openstack/os-client-config
     version: 1.30.0
+  - projects:
+      - hash: 5c2eae8f8242332aff59d18b45a7d17f01524aaa
+        repo: openstack/os-client-config
+    version: 1.31.0
