--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 9fd52fd8e6be6bdbdea1f19e514630329649b95f
         repo: openstack/oslo.policy
     version: 1.34.0
+  - projects:
+      - hash: 9161a90ef4a20a6f996c99f5871ca7691ebd6a02
+        repo: openstack/oslo.policy
+    version: 1.35.0
