--- a/deliverables/_independent/kuryr-tempest-plugin.yaml
+++ b/deliverables/_independent/kuryr-tempest-plugin.yaml
@@ -7,5 +7,9 @@ releases:
     projects:
       - repo: openstack/kuryr-tempest-plugin
         hash: 8c2fe4d9002e72cc07b025e377d1253e27b3c60c
+  - version: 0.2.0
+    projects:
+      - repo: openstack/kuryr-tempest-plugin
+        hash: 20222a02002052724084af00e4cbac98cd7a0e7c
 repository-settings:
   openstack/kuryr-tempest-plugin: {}
