--- a/deliverables/rocky/os-client-config.yaml
+++ b/deliverables/rocky/os-client-config.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 5c2eae8f8242332aff59d18b45a7d17f01524aaa
         repo: openstack/os-client-config
     version: 1.31.0
+  - projects:
+      - hash: a21123c384e6ff11269b7e6056f940de48413cab
+        repo: openstack/os-client-config
+    version: 1.31.1
