--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -35,6 +35,10 @@ releases:
       - hash: 78cd10662f20c4ae43e20a2dfa844cfd4e5cae26
         repo: openstack/oslo.versionedobjects
     version: 1.26.1
+  - projects:
+      - hash: c4e7defc88a79952c93b151310688f6cf39d3e6d
+        repo: openstack/oslo.versionedobjects
+    version: 1.26.2
 team: oslo
 type: library
 repository-settings:
