oslo releases for queens stable branch
Several bug fix releases from the stable/queens branch.

Change-Id: I58cd5c01aa4c2d3bb71cf58139e78c8d6b7d4afa
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 55e06261aa86c87c7c059fbddc97cdbaae06e8dd
         repo: openstack/oslo.concurrency
     version: 3.25.0
+  - projects:
+      - hash: 0c4718fcb77e9f4e3a22ae458869b7294b7bc91f
+        repo: openstack/oslo.concurrency
+    version: 3.25.1
 branches:
   - name: stable/queens
     location: 3.25.0
