--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: ea1ec64274475465f35d68b93dc95b643a51830a
         repo: openstack/oslo.db
     version: 4.33.0
+  - projects:
+      - hash: 2676c57bf0705ff3ab8a82111d76ffad921e8a59
+        repo: openstack/oslo.db
+    version: 4.33.1
 branches:
   - name: stable/queens
     location: 4.33.0
