--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: c95f0c876840e36f37acb14d5eec5238d85e7dce
         repo: openstack/oslo.versionedobjects
     version: 1.31.2
+  - projects:
+      - hash: b607dad267aff8ce87f956e9f2586b9e44a58f44
+        repo: openstack/oslo.versionedobjects
+    version: 1.31.3
 branches:
   - name: stable/queens
     location: 1.31.1
