--- a/deliverables/queens/tooz.yaml
+++ b/deliverables/queens/tooz.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: 4fd0c8a6ba7ffca76b02812242ab83e3604ed36a
         repo: openstack/tooz
     version: 1.60.0
+  - projects:
+      - hash: cfa6b9ae4986bf5ced2f8f197719fc78152a83f9
+        repo: openstack/tooz
+    version: 1.60.1
 branches:
   - name: stable/queens
     location: 1.59.0
