Oslo releases for 2018-5-7
Change-Id: Ia6945dbd54509a88ee49f76be22a8adb8a906e64

--- a/deliverables/rocky/oslo.cache.yaml
+++ b/deliverables/rocky/oslo.cache.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 0013b9b0648b4e445ac9c44ffec1ac9b0c2a71d7
         repo: openstack/oslo.cache
     version: 1.30.0
+  - projects:
+      - hash: eedaff4cac47ad4a39fdccfeb71b8c63ff2e2463
+        repo: openstack/oslo.cache
+    version: 1.30.1
