--- a/deliverables/rocky/oslo.log.yaml
+++ b/deliverables/rocky/oslo.log.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 110191aa505cfefafee1c8579213b2f9c3397b6c
         repo: openstack/oslo.log
     version: 3.38.0
+  - projects:
+      - hash: 89bbb3fb79ecfa45ed41afee86900131b3e37dc6
+        repo: openstack/oslo.log
+    version: 3.38.1
