--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -8,6 +8,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.5.0
+  - projects:
+      - hash: 3308cd9944eba26735ec5d66452c22204a62ea89
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.6.0
 team: keystone
 type: library
 repository-settings:
