--- a/deliverables/rocky/keystonemiddleware.yaml
+++ b/deliverables/rocky/keystonemiddleware.yaml
@@ -7,6 +7,10 @@ releases:
       - hash: cc9a7e27d127df1365ed6970fb2859d4961b5733
         repo: openstack/keystonemiddleware
     version: 5.0.0
+  - projects:
+      - hash: 83d0612e03471f56be3be2b521cc21974118cebe
+        repo: openstack/keystonemiddleware
+    version: 5.1.0
 team: keystone
 type: library
 repository-settings:
