--- a/deliverables/rocky/sushy.yaml
+++ b/deliverables/rocky/sushy.yaml
@@ -5,3 +5,8 @@ type: library
 release-model: cycle-with-intermediary
 repository-settings:
   openstack/sushy: {}
+releases:
+  - projects:
+      - hash: fc012cb706540c5f72709ebdc4d284021c8e3141
+        repo: openstack/sushy
+    version: 1.4.0
