--- a/deliverables/queens/python-vitrageclient.yaml
+++ b/deliverables/queens/python-vitrageclient.yaml
@@ -12,6 +12,10 @@ releases:
     projects:
       - hash: 7fd3400c536cb4f245b389642fd82f962fbdb2bd
         repo: openstack/python-vitrageclient
+  - version: 2.1.0
+    projects:
+      - hash: d6bd2be30abccf02208e277bdb191701eeeb3dfe
+        repo: openstack/python-vitrageclient
 release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/queens.html
 repository-settings:
   openstack/python-vitrageclient: {}
