--- a/deliverables/queens/vitrage.yaml
+++ b/deliverables/queens/vitrage.yaml
@@ -19,6 +19,10 @@ releases:
     projects:
       - repo: openstack/vitrage
         hash: 1537886924cd6fe7c5bf9b4b82a0c287c6b08cfa
+  - version: 2.3.0
+    projects:
+      - repo: openstack/vitrage
+        hash: 8c6c6e37c8b019ee069ed666dd63eac636f452e2
 repository-settings:
   openstack/vitrage: {}
 release-notes: https://docs.openstack.org/releasenotes/vitrage/queens.html
