--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -13,6 +13,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.6.0
+  - projects:
+      - hash: 0bebdaf0f90deef5121234ac98daa58e6f1f0f77
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.6.1
 team: keystone
 type: library
 repository-settings:
