--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -49,6 +49,10 @@ releases:
     projects:
       - repo: openstack/nova
         hash: bf0a0697734b204e9c64df834895d46382a2cc3c
+  - version: 17.0.4
+    projects:
+      - repo: openstack/nova
+        hash: ac085524caa12e337092337c61bbc705b1bd9325
 cycle-highlights:
   - |
     The performance of listing instances across a multi-cell cells v2
