--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -61,5 +61,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 09593628fda7a6cb947fff34c725e3ef29889dc7
+  - version: 16.1.3
+    projects:
+      - repo: openstack/nova
+        hash: 57c28a379ff6b998953d92983d3be53db3618b69
 repository-settings:
   openstack/nova: {}
