nova: release ocata 15.1.2
Change-Id: I2ca1e2fbbcf66dbeec5cf7a5cf69e9a64a4f103e

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -73,5 +73,9 @@ releases:
       - hash: cec7a9bc91aae9a2e074802cc4443b6db44efa6d
         repo: openstack/nova
     version: 15.1.1
+  - version: 15.1.2
+    projects:
+      - repo: openstack/nova
+        hash: a0bcc6bda09c5dff4bf0ba57b80ebb94f01567f0
 repository-settings:
   openstack/nova: {}
