--- a/deliverables/queens/magnum.yaml
+++ b/deliverables/queens/magnum.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: dd1a2aa3c8e252fcd476520b113403e2fab4d391
         repo: openstack/magnum
     version: 6.1.0
+  - projects:
+      - hash: 197382de3b110410cea9c4e430df27f9053641cc
+        repo: openstack/magnum
+    version: 6.1.1
 branches:
   - name: stable/queens
     location: 6.0.0
