--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -159,5 +159,9 @@ releases:
       - hash: 451d1ebcb9c9b3744c62f97bd4b63959e793de1b
         repo: openstack/reno
     version: 2.9.1
+  - projects:
+      - hash: 5b8e276418e9e93b1256283a035b29a01af1c456
+        repo: openstack/reno
+    version: 2.9.2
 repository-settings:
   openstack/reno: {}
