--- a/deliverables/queens/sahara-extra.yaml
+++ b/deliverables/queens/sahara-extra.yaml
@@ -8,6 +8,10 @@ releases:
     projects:
       - repo: openstack/sahara-extra
         hash: dd99413cd308883fe0283282515737cee1fce7ae
+  - version: 8.0.1
+    projects:
+      - repo: openstack/sahara-extra
+        hash: 391c425e94e94bd1e838fc83e6f7ec3be1e6c353
 branches:
   - name: stable/queens
     location: 8.0.0
