neutron-fwaas-dashboard: release rocky 1.4.0
Change-Id: I04547e7f761276118bb392b90af51f621998fa15

--- a/deliverables/rocky/neutron-fwaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-fwaas-dashboard.yaml
@@ -5,3 +5,8 @@ type: horizon-plugin
 release-model: cycle-with-intermediary
 repository-settings:
   openstack/neutron-fwaas-dashboard: {}
+releases:
+  - projects:
+      - hash: d851e2e5cb3c7d96b4deec6c13d38d21768f2dd1
+        repo: openstack/neutron-fwaas-dashboard
+    version: 1.4.0
