--- a/deliverables/_independent/yaml2ical.yaml
+++ b/deliverables/_independent/yaml2ical.yaml
@@ -36,5 +36,9 @@ releases:
     projects:
       - repo: openstack-infra/yaml2ical
         hash: 2bc859072ffd3a6687084f98ab356bcaff27c830
+  - projects:
+      - hash: 6e498abcb6acb8d14809f757abfd85e8ab5b5c1f
+        repo: openstack-infra/yaml2ical
+    version: 0.8.0
 repository-settings:
   openstack-infra/yaml2ical: {}
