Oslo releases for 2018-5-14
Change-Id: I1ad8057682e860d2f3b5b037c7f1b63e86bed9be

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -84,5 +84,9 @@ releases:
       - hash: 7767c44ab1289ed7d1cc4f9e12986bef07865d5c
         repo: openstack-dev/pbr
     version: 4.0.2
+  - projects:
+      - hash: f30aa7a97f0a41a10da7f84a19faef0b4d0f77f5
+        repo: openstack-dev/pbr
+    version: 4.0.3
 repository-settings:
   openstack-dev/pbr: {}
