--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: 10caf02237933aa7c308f5e688b58920e409cf96
         repo: openstack/oslo.config
     version: 6.2.0
+  - projects:
+      - hash: 3e7eecc9f43e4b326018c09d6976489ba5b0d098
+        repo: openstack/oslo.config
+    version: 6.2.1
