--- a/deliverables/rocky/oslo.rootwrap.yaml
+++ b/deliverables/rocky/oslo.rootwrap.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 5a37cb77b4ce6caf63225fb805c9229f3fb80a9d
         repo: openstack/oslo.rootwrap
     version: 5.14.0
+  - projects:
+      - hash: 9b632e29f145a4e56e12f0ef8f860b57c3231257
+        repo: openstack/oslo.rootwrap
+    version: 5.14.1
