--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 9091986228de7bc87d3e70565c9ab0c53b0b8af1
         repo: openstack/oslo.service
     version: 1.31.1
+  - projects:
+      - hash: 6d82217fbe7ec81cf65142e8ccdbee3cee44dff9
+        repo: openstack/oslo.service
+    version: 1.31.2
