--- a/deliverables/rocky/oslo.utils.yaml
+++ b/deliverables/rocky/oslo.utils.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 8d9d958c430db88dff2d364ccff49c39c0d1048a
         repo: openstack/oslo.utils
     version: 3.36.1
+  - projects:
+      - hash: 0fb1b0aabe100bb36d0e4ad6d5a9f96dd8eb6ff6
+        repo: openstack/oslo.utils
+    version: 3.36.2
