--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 1f2639133830ef294a71bc0e516c9b5b0eb4fd19
         repo: openstack/oslo.vmware
     version: 2.28.0
+  - projects:
+      - hash: d9b09a58d5954d1cbd5f689236438e6ce7ecf542
+        repo: openstack/oslo.vmware
+    version: 2.29.0
