--- a/deliverables/ocata/monasca-ui.yaml
+++ b/deliverables/ocata/monasca-ui.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: a5342f9681d866d6727bd7012a56306c83479ba7
         repo: openstack/monasca-ui
     version: 1.5.3
+  - projects:
+      - hash: 2a983a1f84f48fd1f00c8722c68d96bc923ff745
+        repo: openstack/monasca-ui
+    version: 1.5.4
 repository-settings:
   openstack/monasca-ui: {}
