--- a/deliverables/rocky/python-mistralclient.yaml
+++ b/deliverables/rocky/python-mistralclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 72a6cd9b91ad1544f040052131a3b116e2dee8c3
         repo: openstack/python-mistralclient
     version: 3.4.0
+  - projects:
+      - hash: 8cc76487fd84bfaa3b4ff74248e2b138d21a504e
+        repo: openstack/python-mistralclient
+    version: 3.5.0
