--- a/deliverables/rocky/python-tripleoclient.yaml
+++ b/deliverables/rocky/python-tripleoclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 9b879e28864be555f51fbb2376129c51e5c3af76
         repo: openstack/python-tripleoclient
     version: 10.0.0
+  - projects:
+      - hash: 9a926ae699729c00d5918ee0903861c2bb0c5d20
+        repo: openstack/python-tripleoclient
+    version: 10.1.0
