--- a/deliverables/pike/monasca-agent.yaml
+++ b/deliverables/pike/monasca-agent.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: 11cf0146db9524faf99d489c21eff69b1c378f8d
         repo: openstack/monasca-agent
     version: 2.2.3
+  - projects:
+      - hash: 08861f00ccd0644cce20b828c874971ca9536291
+        repo: openstack/monasca-agent
+    version: 2.2.4
 branches:
   - location: 2.2.0
     name: stable/pike
