--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -32,6 +32,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: f971e5d1a4f86a42346c259e9612f064fc8321a0
+  - version: 0.10.1
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: fd64d41ea6f208a5752fbcd45952a04633ee1392
 branches:
   - name: stable/queens
     location: 0.9.0
