--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -18,6 +18,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.6.1
+  - projects:
+      - hash: 35de6ebe93b94076964f4250bf3fa9b8ff1f8463
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.6.2
 team: keystone
 type: library
 repository-settings:
